@@ -1,0 +1,13 @@
+#pragma once
+
+#include "public.h"
+
+namespace NYT::NTransactionClient {
+
+///////////////////////////////////////////////////////////////////////////////
+
+ITimestampProviderPtr CreateNoopTimestampProvider();
+
+////////////////////////////////////////////////////////////////////////////////
+
+} // namespace NYT::NTransactionClient
